Addresses issue #38 by supporting multiple JDK version jars